--- a/Models/SpeechRepresentation/2025.01.02_MuQ.md
+++ b/Models/SpeechRepresentation/2025.01.02_MuQ.md
@@ -83,7 +83,7 @@ Additionally, our results show that MuQ-MuLan achieves a ROC-AUC score of 79.3 o
 
 ### Self-Supervised Learning for Speech and Audio
 
-Self-supervised learning (SSL)  \cite{mohamed2022self} has been introduced to the field of speech and audio signal processing as a way to learn semantic representations from unlabeled audio data, and it is now widely used in tasks such as automatic speech recognition \cite{baevski2023d2v2} and audio event classification \cite{chen2024eat}.
+Self-supervised learning (SSL) \cite{mohamed2022self} has been introduced to the field of speech and audio signal processing as a way to learn semantic representations from unlabeled audio data, and it is now widely used in tasks such as automatic speech recognition \cite{baevski2023d2v2} and audio event classification \cite{chen2024eat}.
 
 SSL often relies on well-designed targets.
 HuBERT \cite{hsu2021hubert}, for instance, uses K-means clustering labels to guide self-supervised learning in Masked Language Model (MLM) style, with these labels being extracted offline.
@@ -101,7 +101,7 @@ In this paper, we take an alternative approach by iteratively training directly 
 
 Music information retrieval (MIR) contains a large set of tasks to evaluate deep learning models' understanding of music from audio signals or symbolized notation.
 For example, automatic music tagging task require models to do multi-label classification for tags like genre, instrument, and mood, given a music track \cite{won2020tagging}.
-Other MIR tasks include key detection,  pitch detection, emotion analysis, etc \cite{yuan2023marble}.
+Other MIR tasks include key detection, pitch detection, emotion analysis, etc \cite{yuan2023marble}.
 
 In recent years, SSL has been introduced into music understanding for building universal representational models capable of handling various MIR tasks.
 Some of these efforts include CLMR \cite{spijkervet2021clmr} based on contrastive learning; MERT \cite{li2023mert} based on MLM proxy task; and more recently, MusicFM \cite{won2023musicfm}.
@@ -149,7 +149,7 @@ During the training of Mel-RVQ, the final loss function can be decomposed into t
 - **Codebook loss** trains the RVQ component to improve the fit of the codebook embedding $Q_\tau$ to the dimensionality-reduced features $z$.
 Formally,
 $$
-    loss_{\mathrm{code}} = \sum_{ \substack{x \in B, \\ z = M_\mathrm{P} x} } { \| \mathrm{norm}(Q_\tau) - \mathrm{norm}(\mathrm{sg}(z)) \| ^2}
+loss_{\mathrm{code}} = \sum_{ \substack{x \in B, \\ z = M_\mathrm{P} x} } { \| \mathrm{norm}(Q_\tau) - \mathrm{norm}(\mathrm{sg}(z)) \| ^2}
 $$
 where $B$ refers to a mini-batch of data, $x$ denotes Mel spectrum input and $\mathrm{sg}$ denotes stop-gradient.
 $M_\mathrm{P}$ is the projection matrix and token $\tau$ is the closest to the projected vector $z$ in the $l_2$-normalized embedding space.
@@ -185,13 +185,13 @@ In this way, we have
 
 $$
 \begin{aligned}
-   z^{(n)} &= M_\mathrm{P}^{(n)} r^{(n-1)} \\
-   \tau^{(n)} &= {\arg\min_{i} \| \mathrm{norm}(z^{(n)}) - \mathrm{norm}(Q^{(n)}_i) \|} \\
-   r^{(n)} &= r^{(n-1)} - M_\mathrm{D}^{(n)} Q^{(n)}_{\tau^{(n)}} \\
+z^{(n)} &= M_\mathrm{P}^{(n)} r^{(n-1)} \\
+\tau^{(n)} &= {\arg\min_{i} \| \mathrm{norm}(z^{(n)}) - \mathrm{norm}(Q^{(n)}_i) \|} \\
+r^{(n)} &= r^{(n-1)} - M_\mathrm{D}^{(n)} Q^{(n)}_{\tau^{(n)}} \\
 \end{aligned}
 $$
 
-where  $n \in 1\ldots N$; $r^{(n)}$ is the residual signal passed to next step in quantizer and $r^{(1)} = x$.
+where $n \in 1\ldots N$; $r^{(n)}$ is the residual signal passed to next step in quantizer and $r^{(1)} = x$.
 $M_\mathrm{P}^{(n)}$ and $M_\mathrm{D}^{(n)}$ denote the residual-projection matrices for the encoder and decoder, which contain multiple steps of projection.
 The superscript $(n)$ denotes the components or features corresponding to the quantizer at step $n$.
 
@@ -227,7 +227,7 @@ We use decoupled contrastive learning (DCL) loss \cite{yeh2022decoupled}.
 Formally, given the $i$-th (music, text) pair in a mini-batch, for the embeddings $(e_\mathrm{m}^{(i)}, e_\mathrm{t}^{(i)})$, we have
 
 $$
-   L_{\mathrm{DCL}} = - \mathrm{log} \sum_{(i, j)}\frac{\mathrm{sim}(e_\mathrm{m}^{(i)}, e_\mathrm{t}^{(j)}) / \sigma}{ \sum_{i \neq j} \mathrm{sim}(e_\mathrm{m}^{(i)}, e_\mathrm{t}^{(j)}) / \sigma}
+L_{\mathrm{DCL}} = - \mathrm{log} \sum_{(i, j)}\frac{\mathrm{sim}(e_\mathrm{m}^{(i)}, e_\mathrm{t}^{(j)}) / \sigma}{ \sum_{i \neq j} \mathrm{sim}(e_\mathrm{m}^{(i)}, e_\mathrm{t}^{(j)}) / \sigma}
 $$
 
 where $\mathrm{sim}$ denotes dot-product similarity, and $\sigma$ is temperature coefficient.
@@ -290,34 +290,232 @@ We evaluate MuQ on the MARBLE benchmark \cite{yuan2023marble} and conduct experi
 Note that all datasets appearing in the downstream tasks are \textbf{not} included in the pre-training data of MuQ.
 
 Due to page limitations, we only provide a brief overview of the downstream tasks here.
-We encourage readers to refer to the Appendix  \uppercase\expandafter{\romannumeral1} for details on these tasks.
+We encourage readers to refer to the Appendix \uppercase\expandafter{\romannumeral1} for details on these tasks.
 
-- **Genre classification** aims to determine the most suitable genre for a song.
-We use the GTZAN dataset \cite{Tzanetakis_Cook_2002} and report the accuracy scores.
-- **Key detection** predicts the tonal scale and dominant pitch level.
-We use the Giantsteps dataset \cite{Knees_2015_GS}, and a refined accuracy metric \cite{raffel2014mir_eval}.
-- **Emotional analysis** is taken on the Emomusic dataset \cite{Soleymani_Caro_Schmidt_Sha_Yang_2013}.
- The metrics are determination coefficients for valence ($\mathrm{R2^V}$) and arousal ($\mathrm{R2^A}$) score.
-- **Singer identification** on the VocalSet \cite{Wilkins_2018_vocalset}
-dataset.
-The evaluation metric is accuracy.
-- **Vocal technique detection** on the VocalSet \cite{Wilkins_2018_vocalset}.
-The evaluation metric is accuracy.
-- **Music tagging** involves multi-label classification of 50 tags on the MagnaTagATune \cite{law2009mtt} dataset.
-The metrics are ROC-AUC and average precision (AP).
-- **Music structure analysis** predicts the functional
-label for music segments on the Harmonix dataset \cite{nieto2019harmonix}.
-The evaluation metric is accuracy.
-- **Instrument classification** on the Nsynth dataset \cite{Engel_2017_NSynth}.
-The evaluation metric is accuracy.
-- **Pitch classification** of the 128-pitch on the Nsynth dataset \cite{Engel_2017_NSynth}.
-The metric is accuracy.
+We present here a detailed description of 9 downstream tasks involved in the evaluation, with their respective datasets and evaluation metrics.
+Most of the downstream tasks are based on the awesome MARBLE-benchmark \cite{yuan2023marble} implementation.
 
 In evaluating the pre-trained MuQ, we extract features from each layer and use a linear probe to perform downstream tasks.
 For the MuQ-MuLan experiments, we use a zero-shot approach for music tagging.
 This involves directly calculating the similarity between music and text embeddings to determine the prediction probability for each tag.
 
+#### Genre Classification
+
+**Genre classification** aims to determine the most suitable genre for a song.
+We use the GTZAN dataset \cite{Tzanetakis_Cook_2002} and report the accuracy scores.
+
+Music Genre classification is an important tasks of Music Information Retrieval (MIR).
+It aims to determine the most suitable genre for each song in dataset.
+We use the GTZAN dataset \cite{Tzanetakis_Cook_2002} for this task.
+
+The GTZAN dataset has a collection of 10 genres with 100 audio files each, all having a length of 30 seconds.
+We set windows of 10-seconds as inputs to get the features respectively, then combine the results to get the features used for the downstream task.
+We utilize the standard "fail-filtered" split \cite{Kereliuk_Sturm_Larsen_2015} for training and evaluating, then we provide the accuracy scores on testing set to show the final result.
+
+#### Key Detection
+
+**Key detection** predicts the tonal scale and dominant pitch level.
+We use the Giantsteps dataset \cite{Knees_2015_GS}, and a refined accuracy metric \cite{raffel2014mir_eval}.
+
+Key detection estimates the tonal scale and dominant pitch level of each given song.
+Specifically, the labels of the task contains major and minor scales for all pitch classes, that is, 24 classes in total.
+
+We use the Giantsteps dataset \cite{Knees_2015_GS}, which has a collection of annotations for 604 2-min audio previews of songs, as the test set, and a commonly-used subset of the Giantsteps-MTG-keys dataset \cite{Korzeniowski_Widmer_2017}, for training and validation.
+We used the split method that was described in \cite{Castellon_Donahue_Liang_2021}.
+Finally, we used the refined accuracy with error tolerance score \cite{raffel2014mir_eval} following Table \ref{tab:r_acc} to evaluate the performance of models.
+
+#### Emotion Analysis
+
+**Emotional analysis** is taken on the Emomusic dataset \cite{Soleymani_Caro_Schmidt_Sha_Yang_2013}.
+The metrics are determination coefficients for valence ($\mathrm{R2^V}$) and arousal ($\mathrm{R2^A}$) score.
+
+The Music Emotion Recognition aims to get the Emotion score of songs.
+We use the Emomusic dataset \cite{Soleymani_Caro_Schmidt_Sha_Yang_2013}, which contains music clips of 45 seconds.
+The dataset has 1000 clips in total.
+After removing the duplicates, the size of the dataset is reduced to 744 songs.
+Each clip is labeled with two scores: valence score indicates positive and negative emotional responses, and arousal score indicates emotional intensity.
+The dataset split is same as \cite{Castellon_Donahue_Liang_2021}.We divide the whole signal into 5s windows as the inputs of SSL models to get the features, then combine the features as the inputs of a simple regression models.
+
+At testing stage, we can get multiple predictions.
+Each prediction of a given song is a pair of scores of valence score and arousal score, which is same as the ground truth.
+We calculate the determination coefficient (R2) between the model regression results and human annotations of arousal (R2A) and valence (R2V) \cite{Soleymani_Caro_Schmidt_Sha_Yang_2013} as metrics for the test results.
+
+#### Singer Identification
+
+**Singer identification** on the VocalSet \cite{Wilkins_2018_vocalset}
+dataset.
+The evaluation metric is accuracy.
+
+Singer identification is to recognize the corresponding singer based on the given singing audio.
+
+We use the Vocalset dataset \cite{Wilkins_2018_vocalset}, which contains 20 different singers (11 male and 9 female) who perform 17 different singing techniques in various contexts.
+We randomly split the dataset into traning,validation and testing sets based on a ratio of 12:8:5, all of which contain the full 20 singers.
+The evaluation metric is accuracy.
+
+#### Vocal Technique Detection
+
+**Vocal technique detection** on the VocalSet \cite{Wilkins_2018_vocalset}.
+The evaluation metric is accuracy.
+
+Vocal technique detection is to identify the techniques that the singer used in a given audio segment.
+We use the VocalSet dataset for this task.
+As the audio clips are divided into 3 seconds, the task only requires a judgement on the type of technique and not on the start and end of the technique.
+We used the same 10 different singing techniques as in \cite{Yamamoto_Nam_Terasawa} as a subset and used the same 15 singers as the training and validation sets and 5 singers as the test set.
+Due to the lack of a standardized division between training and validation sets, we opted for a selection of 9 singers as the training set and 6 singers as the validation set.
+All segments originating from the same recording are assigned to the same portion of the split.
+For evaluation purposes, we employ accuracy as the metric in this classification task.
+
+#### Music Tagging
+
+**Music tagging** involves multi-label classification of 50 tags on the MagnaTagATune \cite{law2009mtt} dataset.
+The metrics are ROC-AUC and average precision (AP).
+
+Music tagging assigns a set of fixed tags for a given song.
+Tag contains genre, instrumentation, mood and so on.
+We use the MagnaTagATune (MTT) \cite{Law_West_Mandel_Bay_Downie_2009} dataset.
+MTT dataset contains 25,863 music clips.
+Each clip is a 29-seconds-long excerpt belonging to one of the 5223 songs, 445 albums and 230 artists.
+ The clips span a broad range of genres like Classical, Rock, Pop, Jazz, Blues and more.
+Each audio clip is labeled by human with a vector of binary annotations of 188 tags.
+The annotations include tags like "singer", "no singer", "violin", "drums", "classical", "jazz".
+The top 50 most popular tags are typically used for evaluation to ensure that there is enough training data for each tag.
+
+For both datasets, we limit the tag vocabulary according to official instructions.
+We use all clips in MTT.
+The metrics are the macro-average of ROC-AUCs, a multiclass AUC as the average of the area under multiple binary ROC curves, and the average precision (AP) / PR-AUC, the weighted mean of precisions at each threshold, among all top-50 tags.
+
+#### Music Structure Analysis
+
+**Music structure analysis** predicts the functional label for music segments on the Harmonix dataset \cite{nieto2019harmonix}.
+The evaluation metric is accuracy.
+
+Music structure analysis aims to split a music signal into non-overlapping sections and predict the functional label for each segment, including "intro',"verse',"chorus' and so on.
+We use the Harmonix Set \cite{nieto2019harmonix} for the experiment.
+This is a frame-wise classification task.
+We first construct a probability curve based on the given data annotations, where each frame contains a boundary score and a function score.
+
+To standardize the labels, we mapped the labels in the data following the setting in \cite{Wang_Hung_Smith_2022}.
+Then, to ensure smooth training of the model, we create smoothed function and boundary activation curves.
+We smooth the transitions of the function activation curves using a Hanning window: a 1-second ramp from 0 to 1 prior to the onset, and a 1-second ramp down after the offset, as in \cite{Wang_Smith_Chen_Song_Wang_2021}.
+For boundary curves, we also set a duration of 0.6 seconds for each boundary using a Hanning window.
+
+We use a simple LSTM model to predict frame-wise probabities of functional and boundary curves.
+Frame-wise accuracy for functional labels is used as metric.
+
+#### Instrument Classification
+
+**Instrument classification** on the Nsynth dataset \cite{Engel_2017_NSynth}.
+The evaluation metric is accuracy.
+
+Instrument classification identify which instruments are used in a given music segment.
+We use the NSynth dataset \cite{Engel_2017_NSynth} and MTG-instrument dataset.The NSynth Dataset is an audio dataset containing ~300k musical notes, each with a unique pitch, timbre, and envelope.
+Each note is annotated with three additional pieces of information based on a combination of human evaluation and heuristic algorithms: Source, Family, and Qualities.
+Each segment may contain multiple instruments.
+We evaluate the model using ROC and AP scores.
+
+#### Pitch Classification
+
+**Pitch classification** of the 128-pitch on the Nsynth dataset \cite{Engel_2017_NSynth}.
+The metric is accuracy.
+
+Pitch classification aims to detect the certain pitch of a given short audio clip in 128 pitch categories.
+We use the NSynth dataset \cite{Engel_2017_NSynth} for this task, then we use accuracy score to evaluate the performance.
+
 ## 5·Results: 结果
+
+### Performance of Pre-trained MuQ
+
+We compare MuQ with two popular models, MERT and MusicFM.
+For MERT, we use \texttt{MERT-v1-330M} version \cite{li2023mert}, the most superior of its releases on HuggingFace. % \footnote{\url{https://huggingface.co/m-a-p/MERT-v1-330M}}
+For MusicFM, we use the checkpoint pre-trained on the MSD dataset \cite{bertin2011msd}, which is publicly available by \cite{won2023musicfm}.
+All models are of around 330M parameters.
+
+Table \ref{tab:marble_res1} and Table \ref{tab:marble_res2} present the results for three versions of MuQ.
+Considering the experiments are very extensive and time-consuming, we conduct 5 runs for MuQ models and report the mean scores and standard deviations for all tasks.
+
+It is shown that for MuQ\textsubscript{m4a}, pre-trained on the 0.9K-hour Music4All dataset, already outperforms MERT and MusicFM.
+Training MuQ on a larger dataset further amplifies this advantage.
+Iterative training slightly improves the effectiveness of MuQ, resulting in MuQ\textsubscript{iter} with an average score of 77.0, which is our best-performing model.
+
+MuQ outperforms previous models on many downstream tasks, especially in genre classification, singer identification, vocal technique detection, music structure analysis and instrument classification.
+We visualize the result of MuQ in Figure \ref{fig:radar}.
+
+### Ablation Study on Mel-RVQ
+
+We carry out an ablation study for Mel-RVQ in Table \ref{tab:comp_abl} to demonstrate the effect of its key components.
+In the ablation experiments, all models are pre-trained 75K steps on the Music4all with 310M parameters, and tested on 5 tasks.
+
+The VQ type in Table \ref{tab:comp_abl} indicates whether the VQ is randomly initialized or trained on music data, and Residual indicates whether residual multiple codebooks are used.
+As shown, it's crucial to train the VQ rather than leaving it random, as this boosts the performance of MusicFM and MuQ by 1.6 and 2.8, respectively.
+Also, the residual structure of Mel-RVQ is beneficial and allows MuQ to gain a significant advantage over MusicFM.
+
+### Ablation Study on Music SSL Target
+
+We ablate the number of target tokens and tokenization SSL training, this involves some hyperparameters of Mel-RVQ, as well as a comparison with Encodec target.
+
+As seen in Table \ref{tab:target_abl}, performance gradually improves as the number of codebooks increases.
+We believe this is because more codebooks allow the model to capture fine-grained audio features more effectively.
+ This also implies the advantage of multi-target learning for SSL pre-training.
+
+We also explore the depth of the Mel-R\textbf{}VQ encoder and decoder by scaling up the linear projection to a 3-layer fully connected network, referred to as Mel-RVQ (deeper) in Table \ref{tab:target_abl}.
+However, the results suggest that increasing the depth of the Mel-RVQ network actually degrades performance.
+This indicates that a single layer of linear projection is sufficient for Mel-RVQ to achieve optimal performance.
+
+Finally, we compare Mel-RVQ with the Encodec target.
+ It can be seen in Table \ref{tab:target_abl} that Mel-RVQ, despite being a very lightweight structure, outperforms the Encodec tokenization target.
+We attribute this to the fact that the token produced by Encodec is a high abstraction of the music audio, which leads to it being more difficult for the model to learn.
+
+### Performance of MuQ-MuLan
+
+In Table \ref{tab:mulan} , we compare MuQ-MuLan with LAION-CLAP \cite{laionclap2023}, Microsoft-CLAP 2023\cite{CLAP2023} and MuLan \cite{huang2022mulan}.
+We use the open-source \texttt{larger\_clap\_music\_and\_speech} version for LAION-CLAP, which is the best-performing checkpoint among its releases in our experiments.
+We also introduce two variants that employ MERT or MusicFM as the music encoder and refer to them as MERT-MuLan and MusicFM-MuLan.
+
+Following previous study \cite{vasilakis2024canlisten}, we choose the proven superior MusCALL prompt: "A \textless label\textgreater \: track" for all models to test in our experiments.
+
+MuQ-MuLan outperforms previous models in both ROC-AUC and PR-AUC and reaches the SOTA in the zero-shot setting.
+Impressively, MuQ-MuLan still has a slight advantage over MuLan despite the gap in data amounts.
+
+Although both use the same contrastive learning setup, MuQ-MuLan outperforms MERT-MuLan.
+Furthermore, even though MuQ and MusicFM have identical model structures, MuQ-MuLan still performs better.
+This suggests that MuQ provides a better initialization for contrastive training.
+
+We visualize the performance of MuQ-MuLan in Figure \ref{fig:tagging}, and plot the comparision with LAION-CLAP \cite{laionclap2023}, Microsoft-CLAP 2023 \cite{CLAP2023} and MuLan \cite{huang2022mulan}.
+
+### Layer-Wise Analysis
+
+In Figure \ref{fig:task_layer}, we visualize the results of each layer's features in various downstream tasks during one run of the MuQ model.
+The analysis can be summarized as follows:
+
+- **Semantic tasks**, such as genre classification and structure analysis, generally achieve the best results at the higher layers.
+They focus more on semantic information such as the direction of the music and the overall style.
+- **Acoustic tasks**, such as singer identification, instrument classification, pitch classification, and key detection, perform best at the lower layers.
+This implies that they are more closely associated with low-level characteristics such as the original audio features.
+- **Comprehensive tasks**, such as music tagging, emotional analysis, and vocal tech classification, have a relatively even distribution across all layers.
+This suggests that they rely on various aspects.
+
+### Discussion: 讨论
+
+#### Additional Explanation of Mel-RVQ
+
+Although in this paper, we only discuss the case of Mel-RVQ with up to 8 codebooks, this does not mean that more codebooks are meaningless.
+Exploring Mel-RVQ with more codebooks may help understand the reasons why Mel-RVQ works and the limits of this advantage.
+The selection of layer 10 in iterative training is based on empirical intuition rather than rigorous experimental comparison.
+Due to limited computational resources, we did not explore other layers.
+We believe that iterating over other layers could potentially lead to better results, and this is a worthwhile topic of future research.
+
+#### Potential Role of Virtual Classes in SSL
+
+The concept of virtual classes, introduced in \cite{chen2018virtual}, suggests that adding dummy classes to classification tasks can improve performance.
+We note that in fact the random projection quantizer in BEST-RQ, while having low codebook utilization, those codes that are never hit may in fact provide a role similar to that of virtual classes.
+In addition, we also observe in our early experiments with Mel-RVQ that virtual classes have a potential effect on the SSL training.
+Although our approach does not involve virtual classes, we believe their role in SSL merits further investigation.
+
+#### Limitation and Future Work
+
+Mel-RVQ is required to be pre-trained on music data before being used for SSL targeting.
+While we emphasize that the training process for Mel-RVQ is very fast (less than 1 hour), this is still not a completely out-of-the-box approach like BEST-RQ.
+In future work, we will also explore different model sizes (e.g., 90M $base$ size) for the requirements of different physical environments and computational conditions.
 
 ## 6·Conclusions: 结论
 
