add VITA-1.5 related work

--- a/Models/SpeechLM/2025.01.03_VITA-1.5.md
+++ b/Models/SpeechLM/2025.01.03_VITA-1.5.md
@@ -53,6 +53,16 @@ VITA-1.5 demonstrates comparable perception and reasoning capabilities comparabl
 
 ## 2·Related Works: 相关工作
 
+Recently, thanks to the rapid development of language models such as GPTs~\citep{gpt4,brown2020language}, LLaMA~\citep{touvron2023llama,touvron2023llama2}, Alpaca~\citep{taori2023stanford}, Vicuna~\citep{chiang2023vicuna}, and Mistral~\citep{jiang2023mistral}, researchers have successfully extended text comprehension to multimodal understanding/reasoning through techniques like multimodal alignment and instruction tuning.
+For example, models such as LLaVA~\citep{liu2023visual}, Qwen-VL~\citep{bai2023qwen}, Cambrian-1~\citep{tong2024cambrian}, Mini-Gemini~\citep{li2024mini}, MiniCPM-V 2.5~\citep{hu2024minicpm}, DeepSeek-VL~\citep{lu2024deepseek}, and SliME~\citep{zhang2024beyond} have made significant advances in image perception and reasoning, while models like LongVA~\citep{zhang2024longva} and Video-LLaVA~\citep{lin2023video} have showcased the latest progress in video understanding.
+These models are increasingly capable of handling diverse data types, driving the continuous improvement of multimodal perception and understanding capabilities.
+
+However, compared to proprietary models that support multiple modalities, including audio, image, and text (e.g., GPT-4o~\citep{gpt4o} and Gemini-Pro 1.5~\citep{team2023gemini}), most open-source models have primarily focused on image and text modalities~\citep{zhan2024anygpt}.
+Moreover, few open-source models have involved multimodal interaction capabilities, which is a relatively unexplored area.
+While works like VITA-1.0~\citep{fu2024vita} have made initial attempts to introduce speech for human-computer interaction, introducing additional speech data poses challenges to the model’s original multimodal abilities.
+Furthermore, speech generation typically relies on existing TTS systems, which often results in high latency, thus impacting user experience.
+In this paper, we present VITA-1.5 that leverages a refined training strategies, excelling in perceiving data across four modalities (video, image, text, and audio), while also realizing near real-time vision and speech interaction.
+
 ## 3·Methodology: 方法
 
 ## 4·Experiments: 实验
