add VITA-1.5 conclusion

--- a/Models/SpeechLM/2025.01.03_VITA-1.5.md
+++ b/Models/SpeechLM/2025.01.03_VITA-1.5.md
@@ -70,3 +70,8 @@ In this paper, we present VITA-1.5 that leverages a refined training strategies,
 ## 5·Results: 结果
 
 ## 6·Conclusions: 结论
+
+In this paper, we has presented VITA-1.5, a multimodal LLM designed to integrate vision and speech through a carefully crafted three stage training strategy.
+By relieving the inherent conflicts between modalities, VITA-1.5 achieves robust capabilities in both vision and speech understanding, enabling efficient speech-to-speech interactions without relying on separate ASR or TTS modules.
+Extensive evaluations demonstrate that VITA-1.5 performs competitively across multimodal benchmarks.
+We hope that VITA-1.5 can take over the banner of VITA-1.0 and continue to promote the progress of open-source models in the field of real-time multimodal interaction.
