Update FleSpeech Abstract

--- a/Models/Acoustic/2025.01.08_FleSpeech.md
+++ b/Models/Acoustic/2025.01.08_FleSpeech.md
@@ -25,6 +25,9 @@
 
 ## Abstract: 摘要
 
+<details>
+<summary>展开原文</summary>
+
 Controllable speech generation methods typically rely on single or fixed prompts, hindering creativity and flexibility.
 These limitations make it difficult to meet specific user needs in certain scenarios, such as adjusting the style while preserving a selected speaker's timbre, or choosing a style and generating a voice that matches a character's visual appearance.
 To overcome these challenges, we propose ***FleSpeech***, a novel multi-stage speech generation framework that allows for more flexible manipulation of speech attributes by integrating various forms of control.
@@ -33,6 +36,20 @@ This approach enhances the adaptability of speech synthesis and supports creativ
 Additionally, we develop a data collection pipeline for multimodal datasets to facilitate further research and applications in this field.
 Comprehensive subjective and objective experiments demonstrate the effectiveness of ***FleSpeech***.
 Audio samples are available at [this https URL](https://kkksuper.github.io/FleSpeech/).
+
+</details>
+<br>
+
+可控语音生成方法通常依赖于单个或固定提示, 限制了创造性和灵活性.
+这些限制使得难以满足某些场景下的特定用户需求, 例如调整风格同时保留选定说话人的音色, 或选择风格并生成与角色视觉外观相匹配的声音.
+
+为了克服这些挑战, 我们提出了一种新式多阶段语音生成框架 ***FleSpeech***, 通过集成多种形式的控制来实现对语音属性的更灵活的控制.
+***FleSpeech*** 采用多模态提示编码器, 将不同形式的文本音频和视觉提示统一为一个连贯的表示.
+这种方法增强了语音合成的适应性, 并支持对生成语音的创造性和精确控制.
+
+此外, 我们开发了多模态数据集的数据收集流程以促进该领域的进一步的研究和应用.
+全面的主观和客观实验表明了 ***FleSpeech*** 的有效性.
+音频示例可在[此链接](https://kkksuper.github.io/FleSpeech/)获得.
 
 ## 1·Introduction: 引言
 
