add FleSpeech Introduction

--- a/Models/Acoustic/2025.01.08_FleSpeech.md
+++ b/Models/Acoustic/2025.01.08_FleSpeech.md
@@ -53,6 +53,29 @@ Audio samples are available at [this https URL](https://kkksuper.github.io/FleSp
 
 ## 1·Introduction: 引言
 
+Speech synthesis plays a pivotal role in content creation and human-computer interaction.
+With the advancement of powerful generative models, such as large language models~\cite{Valle, TorToiSe, BASETTS, SEEDTTS, ClaM-TTS} and diffusion models~\cite{audiobox, E2TTS, F5TTS}, speech synthesis has experienced rapid progress in recent years~\cite{ControllableSurvey}.
+Beyond a focus on realism, there is a growing emphasis on \textit{flexible and controllable} speech synthesis~\cite{MM-TTS}, such as the ability to manipulate the style of generated speech based on textual descriptions~\cite{PromptStyle, SALLE, PromptTTS2, UniStyle}.
+
+Despite the variety of available speech generation control methods, each approach has its inherent limitations.
+For instance, while speech synthesis based on natural language descriptions offers flexibility, language often struggles to precisely capture all desired attributes, particularly when it comes to describing a speaker's timbre, as textual representations are inherently limited.
+In contrast, the reference audio-based method can clearly define all attributes but relies on existing audio, which lacks creativity and flexibility.
+These constraints make it difficult to address specific user needs in certain scenarios, such as adjusting style while preserving a selected speaker timbre or choosing a style and generating a voice that aligns with a character's visual appearance.
+
+To overcome these constraints and move beyond controllable speech synthesis techniques based on a single or a few control methods, we propose a more flexible controllable speech generation method, \textit{FleSpeech}, which supports multiple forms of control and allows for the combination of different control strategies, thereby meeting the flexible control requirements across various scenarios as illustrated in Fig.~\ref{fig:intro}.
+To this end, we first introduce a multi-stage speech generation framework, with each stage modeling the style and timbre of speech.
+With this framework, we can provide different prompts at different stages, enabling flexibly controllable speech generation.
+Second, we propose a multimodal prompt encoder to embed multimodal prompts into a unified representation.
+Finally, considering the scarcity of multimodal data, we built a data collection pipeline to facilitate research in this area.
+We will release this data collection pipeline upon the acceptance of this paper.
+
+In summary, the main contributions of this work are as follows:
+
+- We propose FleSpeech, a multi-stage speech generation framework that supports multiple prompt inputs to flexibly control different properties of speech.
+Experiments across different tasks demonstrate both the objective and subjective superiority of this method.
+- We propose a unified multimodal prompt encoder, which allows us to input any combination of text, audio, and visual modal prompts and operate them in a unified embedding space.
+- We built a pipeline to facilitate data collection for subsequent multimodal speech generation work.
+
 ## 2·Related Works: 相关工作
 
 ## 3·Methodology: 方法
