add FleSpeech Method

--- a/Models/Acoustic/2025.01.08_FleSpeech.md
+++ b/Models/Acoustic/2025.01.08_FleSpeech.md
@@ -112,6 +112,76 @@ Extending beyond just editing timbre or style, our proposed FleSpeech allows for
 
 ## 3·Methodology: 方法
 
+### Overview: 概览
+
+FleSpeech is designed to flexibly control the synthesis of speech either through any single-form prompt or a combination of different prompt formats.
+For instance, it can control style using a text description while managing timbre with reference audio.
+To facilitate this, as illustrated in Fig.~\ref{fig:modela}, FleSpeech comprises a language model module for semantic token prediction and a Flow Matching-based module for acoustic feature prediction.
+To handle different forms of prompts, a multimodal prompt encoder (MPE) is proposed.
+Specifically, MPE is designed to handle prompts in any format, i.e., text, audio, or image, to obtain a unified representation.
+This unified representation serves as a condition in either the language model or the flow matching module, facilitating targeted control.
+
+Here, we first introduce the language model and flow matching, both of which play crucial roles in speech generation and are classified as components of the multimodal prompt-based speech generator.
+Subsequently, we describe MPE, which is used to control the generator.
+
+### Multimodal Prompt-based Speech Generator
+
+**Language Model for Semantic Generation**
+
+Inspired by the outstanding performance of language models in speech synthesis tasks~\cite{Valle}, we tokenize speech into semantic tokens and then employ a decoder-only transformer-based language model to predict these tokens.
+Specifically, the input text is first converted into a phoneme sequence.
+The language model then takes this phoneme embedding sequence, concatenated with the global condition embedding obtained via MPE, to predict semantic tokens in an autoregressive manner.
+Details about the model parameters are provided in Appendix ~\ref{append:model_config}.
+
+As for speech tokenization, inspired by Vec-Tok~\cite{VecTok}, our tokenizer employs WavLM~\cite{WavLM}, pre-trained on 94k hour dataset\footnote{https://huggingface.co/microsoft/wavlm-large}, to extract speech features.
+We then use the K-means clustering method to discretize these features into 300 tokens, primarily associated with linguistic information.
+
+**Flow Matching for Acoustic Feature Generation**
+
+The absence of acoustic details in semantic tokens results in a gap with the corresponding audio.
+To bridge this gap, a diffusion transformer based flow-matching-based module, similar to Stable Diffusion 3~\cite{stablediffusion3}, is used to generate acoustic features from semantic tokens, supplemented by the conditional embedding created by the MPE.
+Details about this module can be found in Appendix ~\ref{append:model_config}.
+
+Compared to pre-designed acoustic features such as the Mel-spectrum, Glow-WaveGAN~\cite{GlowWaveGAN} demonstrates that the acoustic latent representation learned by a variational autoencoder performs better in acoustic feature prediction and vocoder-based speech synthesis processes.
+Therefore, instead of using the Mel-spectrum as the acoustic feature to be predicted by the flow matching module as in CosyVoice~\cite{du2024cosyvoice}, we adopt WaveGAN implemented in Glow-WaveGAN to extract the latent representation as the acoustic feature via the encoder.
+The decoder is then used as a vocoder to generate the final audio.
+
+### Multimodal Prompt Encoder
+
+The objective of the MPE is to obtain a unified condition embedding based on prompts from multiple modalities.
+Given that the reference audio contains the most comprehensive information and is always available during the speech generation training process, the core idea behind MPE is to map the representations of textual and visual prompts to the space of reference audio embeddings.
+To achieve this, following the approach of IP-Adapter~\cite{IPAdapter}, a query-based encoder structure is employed, which uses some learnable query tokens to extract speech-related information from the representations of different prompts.
+Additionally, due to the many-to-one relationship between reference audio and other prompt modalities, such as multiple voices that correspond to the textual style description "a male speaking loudly and very fast", a diffusion-based method is adopted to model this diversity.
+Specifically, as shown in the Fig.~\ref{fig:modelb}, the embeddings from different prompt modalities are input into the query-based encoder separately.
+These embeddings are then concatenated with the noisy audio embedding $x_t$ and fed into the diffusion process.
+The diffusion model subsequently predicts the ground truth audio embedding $x_0$ through denoising.
+
+**The reference audio prompt embedding**, serving as the anchor for prompt embeddings from different modalities, captures all time-invariant information, such as style and timbre.
+Consequently, the embedding created by the reference audio encoder can be directly used as the conditional embedding in speech generation.
+Similar to Meta-StyleSpeech~\cite{min2021meta}, the reference audio encoder consists of six attention blocks, and the output of the last block is average-pooled to obtain a global audio embedding.
+
+**The textual prompt embedding** can be derived from either the description of the speaking style or facial visual information.
+In this case, the description text is embedded using a pre-trained BERT~\cite{BERT}\footnote{https://huggingface.co/google-bert/bert-large-uncased}, which is to capture the semantic information of the descriptions.
+
+**The visual prompt embedding**, specifically referring to the embedding of face information, is inspired by ID-Animator~\cite{IDAnimator} and aims to capture both static and dynamic information naturally present in face videos.
+Static information encompasses the facial features of the speaker in a specific frame, such as gender, age, hair colour, and body type, and is closely related to the acoustic features of the speaker.
+In contrast, dynamic information reflects the speaker's state and behaviour, such as laughing or chatting.
+This dynamic information complements the static facial features and helps capture nuances that go beyond the capabilities of static images.
+
+MPE is designed to accept inputs from any modality during both training and inference.
+Embeddings from non-input modalities are masked prior to the diffusion process.
+Furthermore, given that different speech attributes are modelled at various stages, the parameters of MPE corresponding to token prediction and acoustic feature generation are not shared.
+
+### Training Strategy
+
+To address the scarcity of multimodal data, we propose a three-stage training strategy.
+We use two types of data: 50,000 hours of large-scale low-expressivity speech data from LibriHeavy and 616 hours of high-expressivity speech data collected from the open-source dataset.
+
+In the first stage, the model is trained on a combination of two datasets to achieve basic speech synthesis capabilities with the large-scale corpus ensuring stability.
+In the second stage, the model is fine-tuned on high-expressive data to achieve domain alignment.
+In the third stage, we freeze the generation model backbone and start training the multimodal encoder to enable the model to support modal inputs other than speech prompts.
+Notably, during this stage,  the multimodal prompt encoder is updated with the generation loss in addition to the diffusion loss.
+
 ## 4·Experiments: 实验
 
 ## 5·Results: 结果
